--- a/src/index.css
+++ b/src/index.css
@@ -11124,4 +11124,10 @@ textarea.form-control-lg {
   min-height: 250px;
 }
 
+.bg-light {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 /*# sourceMappingURL=index.css.map */
